--- a/index.html
+++ b/index.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
     <html>
         <head>
+            <meta charset="UTF-8">
             <title>Basic Portfolio</title>
             <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         </head>
 
         <body>
             <header>
+
                 <section id="name">
-                    Anthony Yonta
+                Anthony Yonta
                 </section>
-                
-                <section id="menu">
 
-
+                <section id="menuwrapper">
+                    <ul id="menu">
+                        <li class="listitem"><a href="index.html">About</a></li>
+                        <li class="listitem"><a href="portfolio.html">Portfolio</a></li>
+                        <li class="listitem"><a href="contact.html">Contact</a></li>
+                    </ul>
                 </section>
+
             </header>
 
-
-
-
-
-
-
-
-
             <section id="content">
-
-
-
-
-
-
+                    <h1>About Me</h1>
 
 
             </section>
-
+                
 
 
 
